[package]
name = "recaptcha"
description = "recaptcha response verification"
version = "0.5.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
license = "MIT"
keywords = ["recaptcha", "captcha"]
repository = "https://github.com/panicbit/recaptcha-rs"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_derive = "1.0"
serde = "1.0"
failure = "0.1"

[dev-dependencies]
serde_json = "1.0"
